# pythonwzastooswaniach

./: .gitignore  prog1_v2.py  prog3.py  progdwaa.py  pyproject.toml
prog1/: prog1_v2.py  pyproject.toml
prog1 copy/: file.txt  prog1.py
prog10/: prog10.py  pyproject.toml
prog2/: mag.txt  progdwaa.py  pyproject.toml
prog3_v2/: prog3.py  pyproject.toml
prog4/: progdwaa.py  pyproject.toml
prog5/: a.json  prog5.py  pyproject.toml
prog6/: a  prog6.py  pyproject.toml
prog7/: population_growth.ipynb  prog7.ipynb  prog7.py  pyproject.toml
prog8/: prog8.ipynb  pyproject.toml  sympy.ipynb
prog9/: prog9.html  prog9.ipynb  prog9.py  pyproject.toml
