[tool.poetry]
name = "progdwaa"
version = "0.1.0"
description = ""
authors = ["w"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pillow = "^10.1.0"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
